tests/validprograms/project/program03.tds
Program {
    Int get_int() extern;
    void print(Int x) extern;

    Int gcd(Int n, Int m) {
        if(m == 0) then {
        	return n;
        } else {
        	return gcd(m, (n % m));
        }
    }

    void main() {
        Int x = get_int();
        Int y = get_int();
        print(gcd(x, y));
    }
}
