tests/invalidprograms/context/redeclared_identifier.tds
Program {
	Int x = 0;

	Int x(Int y, Int z) {
		return y + z;
	}

	void main() {

	}
}

